# hass-bluebot

./: .gitignore  Makefile  README.md  hacs.json  pyproject.toml
.github/workflows/: test.yml  validate.yml
custom_components/bluebot/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  quality_scale.yaml  sensor.py  strings.json
custom_components/bluebot/pybluebot/: __init__.py  client.py  exceptions.py  models.py  util.py
custom_components/bluebot/translations/: en.json
examples/: dashboard.yaml
tests/: __init__.py  conftest.py  helpers.py  test_client.py  test_config_flow.py  test_entities.py  test_live_readonly.py
